@@ -82,9 +82,9 @@
     </div>
 {% with efilter=entity_filters.selected %}
     {% if efilter_id %}
-        <a data-action="popover">
+        <a data-action="popover" data-title="{% blocktranslate %}Conditions of «{{efilter}}»{% endblocktranslate %}">
             {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
-            {% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}
+            <script type="text/html">{% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}</script>
         </a>
     {% endif %}
     {% if show_buttons %}{% ctype_for_model model as ctype %}
